--- a/src/components/MARContainer/components/MARAccount/componentes/MARAccountDetail/MARAccountDetail.module.css
+++ b/src/components/MARContainer/components/MARAccount/componentes/MARAccountDetail/MARAccountDetail.module.css
@@ -1,3 +1,11 @@
+.MARAccountDetailForm {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
+    box-shadow: 0px 0px 12px -4px var(--color-text);
+}
 .MARAccountDetail {
     display: flex;
     flex-direction: column;
@@ -22,7 +30,7 @@
         padding: 0.25rem 0.5rem;
         border-radius: 0.25rem;
         color: var(--color-text);
-        font-family: "Montserrat";
+        font-family: var(--montserrat-family);
         font-size: 1rem;
 
         &::placeholder {
@@ -67,7 +75,7 @@
         padding: 0.25rem 0.5rem;
         border-radius: 0.25rem;
         color: var(--color-text);
-        font-family: "Montserrat";
+        font-family: var(--montserrat-family);
         font-size: 1rem;
 
         &::placeholder {
