--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Poiret+One&display=swap");
 
 :root {
-    font-family: "Montserrat", sans-serif;
+    --montserrat-family: "Montserrat", sans-serif;
+    font-family: var(--montserrat-family);
 
     line-height: 1.5;
     font-weight: 400;
@@ -32,6 +33,7 @@
     --color-white: #fff;
 
     --bg-white: #fff;
+    --color-error: #d32f2f;
 
     --bg-primary-dark: #38006b;
     --bg-primary: #4a148c;
