--- a/src/components/Generics/MARButton/MARButton.module.css
+++ b/src/components/Generics/MARButton/MARButton.module.css
@@ -12,6 +12,7 @@
     white-space: nowrap;
     background-color: var(--bg-primary);
     color: var(--color-white);
+    box-shadow: 0px 0px 6px -2px var(--bg-primary);
 
     &:active {
         background-color: var(--bg-primary-dark);
@@ -47,6 +48,7 @@
     color: var(--color-text);
     outlined: 1px solid inherit;
     transition: box-shadow 0.25s;
+    box-shadow: 0px 0px 6px -2px var(--bg-primary);
 
     &:active {
         background-color: var(--bg-primary-dark);
