--- a/src/components/Generics/MARSelect/MARSelect.module.css
+++ b/src/components/Generics/MARSelect/MARSelect.module.css
@@ -1,4 +1,4 @@
-.MARInput {
+.MARSelect {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -10,14 +10,14 @@
     }
 }
 
-.MARInputContent,
-.MARInputContentNoFocusable {
+.MARSelector,
+.MARSelectorNoFocusable {
     display: flex;
     gap: 0.25rem;
     align-items: center;
     width: 100%;
     height: 2rem;
-    padding: 0.25rem 0.5rem;
+    padding: 0.25rem 0.375rem;
     border-radius: 0.25rem;
     border: 1px solid var(--color-text);
     color: var(--color-text);
@@ -28,13 +28,14 @@
         outline: 2px solid var(--color-text);
     }
 
-    & input {
-        flex: 1;
+    & > select {
+        width: 100%;
         border: none;
         padding: 0;
         font-family: inherit;
         font-size: inherit;
         color: var(--color-text);
+        background-color: var(--color-white);
 
         &::placeholder {
             color: var(--color-text);
@@ -47,15 +48,10 @@
     }
 }
 
-.MARInputContentNoFocusable {
-    border: 1px solid var(--color-white);
+.MARSelectorNoFocusable {
+    border: 1px solid transparent;
 
-    & > input {
+    & > select {
         background-color: var(--color-white);
     }
-}
-
-.MARError {
-    font-weight: bold;
-    color: var(--color-error);
 }
