--- a/src/components/MARContainer/components/MARAccount/componentes/MARAccountDetail/MARAccountDetail.module.css
+++ b/src/components/MARContainer/components/MARAccount/componentes/MARAccountDetail/MARAccountDetail.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.25rem;
-    padding: 1rem;
+    padding: 0.5rem 1rem;
     border-radius: 0.5rem;
     box-shadow: 0px 0px 6px -2px var(--bg-primary);
 }
