--- a/src/components/Generics/MARInput/MARInput.module.css
+++ b/src/components/Generics/MARInput/MARInput.module.css
@@ -18,14 +18,15 @@
     width: 100%;
     height: 2rem;
     padding: 0.25rem 0.5rem;
-    border-radius: 0.25rem;
-    border: 1px solid var(--color-text);
-    color: var(--color-text);
-    font-family: inherit;
-    font-size: inherit;
+    border-radius: var(--border-radius);
+    border: 1px solid var(--bg-primary);
+    background-color: var(--bg-neutral);
+    color: var(--base-text-color);
+    font-family: var(--font-family);
+    font-size: 1rem;
 
     &:focus-within {
-        outline: 2px solid var(--color-text);
+        outline: 2px solid var(--bg-primary);
     }
 
     & input {
@@ -34,11 +35,11 @@
         padding: 0;
         font-family: inherit;
         font-size: inherit;
-        color: var(--color-text);
+        background-color: var(--bg-neutral);
+        color: var(--base-text-color);
 
         &::placeholder {
-            color: var(--color-text);
-            opacity: 0.5;
+            opacity: 0.75;
         }
         &:focus,
         &:focus-visible {
@@ -48,14 +49,14 @@
 }
 
 .MARInputContentNoFocusable {
-    border: 1px solid var(--color-white);
+    border: 1px solid var(--bg-neutral);
 
     & > input {
-        background-color: var(--color-white);
+        background-color: var(--bg-neutral);
     }
 }
 
 .MARError {
-    font-weight: bold;
+    /* font-weight: bold; */
     color: var(--color-error);
 }
