--- a/src/components/Generics/MARInput/MARInput.module.css
+++ b/src/components/Generics/MARInput/MARInput.module.css
@@ -30,7 +30,7 @@
     }
 
     & input {
-        flex: 1;
+        width: 100%;
         border: none;
         padding: 0;
         font-family: inherit;
