--- a/src/components/MARContainer/components/MARAccount/MARAccount.module.css
+++ b/src/components/MARContainer/components/MARAccount/MARAccount.module.css
@@ -1,3 +1,7 @@
 .MARAccount {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
     padding: 0.5rem 1rem;
+    overflow-y: auto;
 }
