--- a/src/components/Generics/MARButton/MARButton.module.css
+++ b/src/components/Generics/MARButton/MARButton.module.css
@@ -5,7 +5,7 @@
     gap: 0.25rem;
     font-family: var(--montserrat-family);
     padding: 0.5em 1em;
-    border-radius: var(--border-radius);
+    border-radius: var(--border-radius-full);
     border: 1px solid var(--bg-primary);
     font-size: var(--font-size);
     cursor: pointer;
@@ -40,7 +40,7 @@
     gap: 0.25rem;
     font-family: var(--montserrat-family);
     padding: 0.5em 1em;
-    border-radius: var(--border-radius);
+    border-radius: var(--border-radius-full);
     border: 1px solid var(--bg-primary);
     font-size: var(--font-size);
     cursor: pointer;
@@ -49,7 +49,6 @@
     color: var(--base-text-color);
     outlined: 1px solid var(--bg-neutral-text);
     transition: box-shadow 0.25s;
-    box-shadow: 0px 0px 6px -2px var(--bg-primary);
 
     &:active {
         background-color: var(--bg-primary-dark);
