--- a/src/components/MARContainer/components/MARAccount/componentes/MARAccountMovements/components/MARAccountMovementsItem/MARAccountMovementsItem.module.css
+++ b/src/components/MARContainer/components/MARAccount/componentes/MARAccountMovements/components/MARAccountMovementsItem/MARAccountMovementsItem.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     gap: 0.5rem;
     padding: 0.5rem 1rem;
-    border: 1px solid var(--bg-primary);
+    border: 1px solid var(--bg-primary-light);
     border-radius: var(--border-radius);
+    /* box-shadow: 0px 0px 6px -2px var(--bg-primary); */
 }
