--- a/src/components/MARHeader/MARHeader.module.css
+++ b/src/components/MARHeader/MARHeader.module.css
@@ -2,10 +2,27 @@
     font-family: "Poiret One", sans-serif;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     /* min-height: 5rem; */
     padding: 1rem;
     width: 100%;
+}
+
+.HeaderTitle {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.HeaderUser {
+    font-family: var(--montserrat-family);
+    display: flex;
+    gap: 0.25rem;
+    align-items: center;
+    & > img {
+        width: 2.4rem;
+        height: 2.4rem;
+        border-radius: var(--border-radius-full);
+    }
 }
 
 @media (min-width: 768px) {
