Add accounts into firebase

--- a/src/components/MARHeader/components/MARAccountNavbar/MARAccountNavbar.module.css
+++ b/src/components/MARHeader/components/MARAccountNavbar/MARAccountNavbar.module.css
@@ -2,6 +2,7 @@
     display: flex;
     gap: 0.5rem;
     width: 100%;
-    padding: 0.5rem 1rem;
+    padding: 0.25rem;
     overflow-x: auto;
+    z-index: 1;
 }
