--- a/src/components/MARHeader/MARHeader.module.css
+++ b/src/components/MARHeader/MARHeader.module.css
@@ -2,8 +2,8 @@
     font-family: "Poiret One", sans-serif;
     display: flex;
     flex-direction: column;
-    /* min-height: 5rem; */
-    padding: 1rem;
+    gap: 0.5rem;
+    padding: 1rem 1rem 0;
     width: 100%;
 }
 
@@ -19,8 +19,8 @@
     gap: 0.25rem;
     align-items: center;
     & > img {
-        width: 2.4rem;
-        height: 2.4rem;
+        width: 2rem;
+        height: 2rem;
         border-radius: var(--border-radius-full);
     }
 }
