--- a/src/components/MARContainer/components/MARAccount/componentes/MARAccountMovements/components/MARAccountMovementsItem/MARAccountMovementsItem.module.css
+++ b/src/components/MARContainer/components/MARAccount/componentes/MARAccountMovements/components/MARAccountMovementsItem/MARAccountMovementsItem.module.css
@@ -5,4 +5,9 @@
     padding: 0.5rem 1rem;
     border-radius: var(--border-radius-lg);
     box-shadow: 0px 0px 6px -2px var(--bg-primary);
+
+    & > div {
+        display: flex;
+        gap: 0.5rem;
+    }
 }
