Fix movement styles

--- a/src/components/MARContainer/components/MARAccount/componentes/MARAccountMovements/components/MARAccountMovementsItem/components/MARAccountMovementsItemHeader/MARAccountMovementsItemHeader.module.css
+++ b/src/components/MARContainer/components/MARAccount/componentes/MARAccountMovements/components/MARAccountMovementsItem/components/MARAccountMovementsItemHeader/MARAccountMovementsItemHeader.module.css
@@ -1,4 +1,18 @@
 .MARAccountMovementsItemHeader {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+.MARAccountMovementOutcomeType,
+.MARAccountMovementIncomeType {
+    display: flex;
+    gap: 0.25rem;
+    align-items: center;
+}
+.MARAccountMovementIncomeType {
+    color: var(--color-success);
+}
+
+.MARAccountMovementOutcomeType {
+    color: var(--color-error);
 }
