--- a/src/components/MARContainer/components/MARAccount/componentes/MARAccountMovements/components/MARAccountMovementsItem/MARAccountMovementsItem.module.css
+++ b/src/components/MARContainer/components/MARAccount/componentes/MARAccountMovements/components/MARAccountMovementsItem/MARAccountMovementsItem.module.css
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    padding: 0.5rem 1rem;
+    padding: 1rem;
     border-radius: var(--border-radius-lg);
     box-shadow: 0px 0px 6px -2px var(--bg-primary);
+}
 
-    & > div {
-        display: flex;
-        gap: 0.5rem;
-    }
+.MARAccountMovementsItemActions {
+    display: flex;
+    gap: 0.5rem;
 }
