Add h2 account and sticky header

--- a/src/components/MARHeader/MARHeader.module.css
+++ b/src/components/MARHeader/MARHeader.module.css
@@ -1,9 +1,11 @@
 .Header {
+    position: sticky;
+    top: 0;
     font-family: "Poiret One", sans-serif;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    padding: 1rem 1rem 0;
+    padding: 1rem 1rem 0.25rem;
     width: 100%;
 }
 
