Add user account movement creation

--- a/src/components/MARContainer/components/MARAccount/MARAccount.module.css
+++ b/src/components/MARContainer/components/MARAccount/MARAccount.module.css
@@ -2,6 +2,6 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    padding: 0.25rem 1rem;
+    padding: 0.25rem 1rem 1rem;
     overflow-y: auto;
 }
