--- a/src/components/MARHeader/MARHeader.module.css
+++ b/src/components/MARHeader/MARHeader.module.css
@@ -7,6 +7,7 @@
     gap: 0.5rem;
     padding: 1rem 1rem 0.25rem;
     width: 100%;
+    background-color: var(--bg-neutral);
 }
 
 .HeaderTitle {
@@ -28,6 +29,4 @@
 }
 
 @media (min-width: 768px) {
-    .Header {
-    }
 }
