--- a/src/components/MARHeader/components/MARErrorHandler/MARErrorHandler.module.css
+++ b/src/components/MARHeader/components/MARErrorHandler/MARErrorHandler.module.css
@@ -10,12 +10,6 @@
     color: var(--color-white);
     z-index: 1;
 
-    & > div {
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-    }
-
     & > button {
         display: flex;
         justify-content: center;
@@ -34,5 +28,12 @@
             background-color: var(--bg-neutral);
             color: var(--color-error);
         }
+    }
+}
+.MARErrorHandlerContainer {
+    & > span {
+        display: flex;
+        gap: 0.5rem;
+        align-items: center;
     }
 }
